# XRootD_cxxwrap

./: CMakeLists.txt  README.md  XRootD-veto.h  XRootD.wit.in
src/cpp/: JlGlobals.cxx  JlXrdCl_Access.cxx  JlXrdCl_AnyObject.cxx  JlXrdCl_Buffer.cxx  JlXrdCl_ChunkInfo.cxx  JlXrdCl_CopyProcess.cxx  JlXrdCl_CopyProgressHandler.cxx  JlXrdCl_DirListFlags.cxx  JlXrdCl_DirectoryList.cxx  JlXrdCl_DirectoryList_ListEntry.cxx  JlXrdCl_File.cxx  JlXrdCl_FileSystem.cxx  JlXrdCl_HostInfo.cxx  JlXrdCl_LocationInfo.cxx  JlXrdCl_LocationInfo_Location.cxx  JlXrdCl_MkDirFlags.cxx  JlXrdCl_OpenFlags.cxx  JlXrdCl_OpenInfo.cxx  JlXrdCl_PageInfo.cxx  JlXrdCl_PrepareFlags.cxx  JlXrdCl_PropertyList.cxx  JlXrdCl_ProtocolInfo.cxx  JlXrdCl_QueryCode.cxx  JlXrdCl_ResponseHandler.cxx  JlXrdCl_RetryInfo.cxx  JlXrdCl_StatInfo.cxx  JlXrdCl_StatInfoVFS.cxx  JlXrdCl_Status.cxx  JlXrdCl_URL.cxx  JlXrdCl_VectorReadInfo.cxx  JlXrdCl_XAttr.cxx  JlXrdCl_XAttrStatus.cxx  JlXrdCl_XRootDStatus.cxx  Jliovec.cxx  Jlstd_basic_string.cxx  generated_cxx  jlXRootD.cxx  jlXRootD.h
src/jl/: XRootD-export.jl  XRootD-generated.jl
